agree border image

--- a/springBootDiseño/user/productdetail.html
+++ b/springBootDiseño/user/productdetail.html
@@ -99,9 +99,10 @@
       margin-top: 2rem;
     }
 
+
     .contenedor {
       max-width: fit-content;
-      background-color: #fff;
+      background-color: #fdfdfd;
       padding: 2rem;
       border-radius: 1rem;
       display: flex;
@@ -110,7 +111,7 @@
     }
 
     .datos-contenedor {
-      margin: 1rem;
+      margin: 0 2rem;
     }
 
     button {
@@ -162,6 +163,7 @@
 
     .imagen a img {
       width: 30rem;
+      border-radius: 1rem;
     }
 
     .cantidad h6 {
