--- a/MyStyle/user/cart/cart.html
+++ b/MyStyle/user/cart/cart.html
@@ -69,7 +69,7 @@
               <h2 class="title-subtotal">SUBTOTAL</h2>
 
               <ul class="total">
-                <li class="vacio"><h5 th:text="${total}">10</h5></li>
+                <li class="vacio"><h5 th:text="${total}"></h5></li>
                 <a th:href="@{/user/order/sumary-order}" class="orden"
                   >Ver Orden</a
                 >
