--- a/MyStyle/user/sumaryorder.html
+++ b/MyStyle/user/sumaryorder.html
@@ -1,83 +1,77 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
+  <!--<head th:insert = "~{user/template_user::head}"></head> -->
 
-   <!--<head th:insert = "~{user/template_user::head}"></head> --> 
-
-   <head>
+  <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="sumaryorder.css" />
     <title>Sumary Order</title>
   </head>
 
-    <body>
+  <body>
+    <!-- Navigation -->
+    <div th:insert="~{user/template_user::header}" th:if="${id==null}"></div>
+    <div
+      th:insert="~{user/template_user::userlogger}"
+      th:unless="${id==null}"
+    ></div>
 
-        <!-- Navigation -->
-        <div th:insert ="~{user/template_user::header}" th:if="${id==null}"></div>
-        <div th:insert ="~{user/template_user::userlogger}" th:unless="${id==null}"></div>
+    <!-- Page Content -->
+    <div class="container">
+      <div class="aling">
+        <!-- Blog Post -->
+        <div class="datos-container">
+          <h5 class="title-orden">DATOS ORDEN</h5>
+          <h6
+            class="nombre"
+            th:text="'Nombre: '+ ${user.firsName} + ' '+ ${user.lastName}"
+          >
+            Nombre:
+          </h6>
+          <h6 class="email" th:text="'Correo: '+ ${user.email}">Correo:</h6>
+          <h6 class="address" th:text="'Dirección: '+ ${user.address}">
+            Dirección
+          </h6>
 
-        <!-- Page Content -->
-        <div class="container">
-
-            <!-- Blog Post -->
-            <div class="card mb-4">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-lg-9">
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    DATOS ORDEN
-                                </h5>
-                                <h6 th:text="'Nombre: '+ ${user.firtName} + ' '+ ${user.lastName}">Nombre: </h6>
-                                <h6  th:text="'Correo: '+ ${user.email}">Correo: </h6>
-                                <h6 th:text="'Dirección: '+ ${user.address}">Dirección</h6>
-
-                                <h5 class="card-title">
-                                    PRODUCTOS
-                                </h5>
-                                <div class="alert alert-light" role="alert">
-                                    <table class="table">
-                                        <thead>
-                                            <tr>
-                                                <th scope="col">Producto</th>
-                                                <th scope="col">Precio</th>
-                                                <th scope="col">Cantidad</th>
-                                                <th scope="col">Total</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr th:each="item:${cart} ">
-                                                <td th:text="${item.nameProduct}">Nombre</td>
-                                                <td th:text="${item.price}">Precio</td>
-                                                <td th:text="${item.quantity}">Cantidad</td>
-                                                <td th:text="${item.getTotalPriceItem()}">Total</td>
-
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-
-                            </div>
-                        </div>
-
-
-                        <div class="col-lg-3">
-                            <h2 class="card-title">Resumen Orden</h2>
-
-                            <ul class="list-group">
-                                <li class="list-group-item"><h5 th:text="${total}"> Total:</h5></li>
-                                <a th:href="@{/user/order/create-order}" class="btn btn-dark">Generar</a>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          <h5 class="title-products">PRODUCTOS</h5>
+          <div class="container-table" role="alert">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Producto</th>
+                  <th scope="col">Precio</th>
+                  <th scope="col">Cantidad</th>
+                  <th scope="col">Total</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr th:each="item:${cart} ">
+                  <td th:text="${item.nameProduct}">Nombre</td>
+                  <td th:text="${item.price}">Precio</td>
+                  <td th:text="${item.quantity}">Cantidad</td>
+                  <td th:text="${item.getTotalPriceItem()}">Total</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
-        <!-- /.container -->
 
-        <!-- Footer -->
-        <div th:insert="~{user/template_user::footer}"></div>
+        <div class="resumen-container">
+          <h2 class="card-title">Resumen Orden</h2>
 
-    </body>
+          <ul class="lista">
+            <li class="total"><h5 th:text="${total}">Total:</h5></li>
+            <a th:href="@{/user/order/create-order}" class="btn btn-dark"
+              >Generar</a
+            >
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- /.container -->
 
+    <!-- Footer -->
+    <div th:insert="~{user/template_user::footer}"></div>
+  </body>
 </html>
