order font size

--- a/springBootDiseño/user/sumaryorder.html
+++ b/springBootDiseño/user/sumaryorder.html
@@ -19,7 +19,7 @@
             <div class="row">
               <div class="col-lg-9">
                 <div class="datos-container">
-                  <h5 class="title-orden">DATOS ORDEN</h5>
+                  <h5 class="title-orden">Datos Orden</h5>
                   <h6
                     class="nombre"
                     th:text="'Nombre: '+ ${user.firtName} + ' '+ ${user.lastName}"
@@ -33,7 +33,7 @@
                     Dirección
                   </h6>
 
-                  <h5 class="title-products">PRODUCTOS</h5>
+                  <h5 class="title-products">Productos</h5>
                   <div class="container-table" role="alert">
                     <table class="table">
                       <thead>
@@ -120,7 +120,7 @@
     }
 
     .datos-container h6 {
-      font-size: 1.3rem;
+      font-size: 1.1rem;
       margin-bottom: 1rem;
     }
 
@@ -152,14 +152,14 @@
 
     thead th {
       padding: 0 1rem;
-      font-size: 1.5rem;
+      font-size: 1.1rem;
       text-align: center;
     }
 
     tbody td {
       padding-top: 2rem;
       text-align: center;
-      font-size: 1.3rem;
+      font-size: 1.1rem;
     }
 
     tbody td a {
