stock create finish

--- a/springBootDiseño/user/productdetail.html
+++ b/springBootDiseño/user/productdetail.html
@@ -101,7 +101,7 @@
 
 
     .contenedor {
-      max-width: fit-content;
+      max-width: 60rem;
       background-color: #fdfdfd;
       padding: 2rem;
       border-radius: 1rem;
