--- a/MyStyle/login.html
+++ b/MyStyle/login.html
@@ -13,96 +13,61 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
-      <div class="container-nav">
-        <a class="marca-title" th:href="@{/home}">Marca</a>
-
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="container-ul" id="navbarResponsive">
-          <ul class="login-ul">
-            <li class="login-li">
-              <a class="login-title" th:href="@{/login}">Login</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
 
     <!-- Page Content -->
-    <div class="container">
-      <div class="aling">
-        <div class="container-ingresar">
-          <h2>Ingresar</h2>
+    <div class="container-main">
+      <div class="imagen">
+        <img src="./user/img/img-3.jpg" alt="imagen" />
+      </div>
+
+      <div class="container">
+        <div class="aling">
+          <div class="container-ingresar">
+            <h2>Ingresar</h2>
+          </div>
+
+          <form class="form-all" th:action="@{/login}" method="post">
+            <div class="email-container">
+              <label class="email-title" for="username"> Email </label>
+              <div class="email-aling">
+                <input
+                  type="email"
+                  class="email-input"
+                  id="username"
+                  name="username"
+                  placeholder="Ingrese su email"
+                  required
+                  autocomplete="off"
+                />
+              </div>
+            </div>
+
+            <div class="password-container">
+              <label class="password-label" for="password"> Contraseña</label>
+              <div class="password-aling">
+                <input
+                  type="password"
+                  class="password-input"
+                  id="password"
+                  name="password"
+                  placeholder="Ingrese su contraseña"
+                  required
+                />
+              </div>
+            </div>
+          </form>
+          <div class="boton-aling">
+            <div class="container-into">
+              <button type="submit" class="ingresar-btn">
+                <span class="ingresar"></span> Ingresar
+              </button>
+            </div>
+            <a th:href="@{/register}" class="register-link">Registrarse</a>
+          </div>
         </div>
-
-        <form class="form-all" th:action="@{/login}" method="post">
-          <div class="email-container">
-            <label class="email-title" for="username"> Email </label>
-            <div class="email-aling">
-              <input
-                type="email"
-                class="email-input"
-                id="username"
-                name="username"
-                placeholder="Ingrese su email"
-                required
-                autocomplete="off"
-              />
-            </div>
-          </div>
-
-          <div class="password-container">
-            <label class="password-label" for="password"> Contraseña</label>
-            <div class="password-aling">
-              <input
-                type="password"
-                class="password-input"
-                id="password"
-                name="password"
-                placeholder="Ingrese su contraseña"
-                required
-              />
-            </div>
-          </div>
-
-          <div class="container-into">
-            <button type="submit" class="ingresar-btn">
-              <span class="ingresar"></span> Ingresar
-            </button>
-          </div>
-        </form>
-        <a th:href="@{/register}" class="register-link"
-          >Si aún no tiene cuenta aqui puede registrarse</a
-        >
       </div>
     </div>
     <!-- /.container -->
-
-    <!-- Footer -->
-    <div th:fragment="footer">
-      <footer class="footer-into">
-        <div class="container-footer">
-          <p class="footer-text">Copyright &copy; Jast 2023</p>
-        </div>
-      </footer>
-      <style>
-        .footer {
-          position: absolute;
-          bottom: 0px;
-          height: 60px;
-          width: 100%;
-        }
-      </style>
     </div>
   </body>
 </html>
