--- a/springBootDiseño/register.html
+++ b/springBootDiseño/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="~{user/template_user::head}"></head>
+  <head th:insert="~{user/template_user::head}"></head>
   <style>
     .error {
       color: red;
@@ -8,171 +8,147 @@
   </style>
 
   <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
-      <div class="container-nav">
-        <a class="navbar-brand" th:href="@{/home}">Naturley</a>
-
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" th:href="@{/login}">Login</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
     <!-- Page Content -->
-    <div class="container">
-      <div class="aling-items">
-        <div class="registro-title">
-          <h2>Registro</h2>
+    <div class="container-main">
+      <div class="imagen">
+        <img src="./user/img/img-3.jpg" alt="imagen" />
+      </div>
+      <div class="container">
+        <div class="aling-items">
+          <div class="registro-title">
+            <h2>Registro</h2>
+          </div>
+
+          <div
+            class="alert alert-success"
+            role="alert"
+            th:text="${success}"
+            th:if="${success}"
+          ></div>
+
+          <form th:action="@{/register}" method="post" th:object="${userDto}">
+            <div class="name-container">
+              <label for="name-label">Nombre:</label>
+              <div class="aling">
+                <input
+                  type="text"
+                  class="name-input"
+                  id="firtName"
+                  name="firtName"
+                  placeholder="Ingrese su nombre"
+                  autocomplete="off"
+                />
+              </div>
+              <p
+                th:if="${#fields.hasErrors('firtName')}"
+                th:errors="*{firtName}"
+                th:errorclass="error"
+              ></p>
+            </div>
+
+            <div class="apellido-container">
+              <label for="apellido-label">Apellido:</label>
+              <div class="aling">
+                <input
+                  type="text"
+                  class="apellido-input"
+                  id="lastName"
+                  name="lastName"
+                  placeholder="Ingrese su apellido"
+                  autocomplete="off"
+                />
+              </div>
+              <p
+                th:if="${#fields.hasErrors('lastName')}"
+                th:errors="*{lastName}"
+                th:errorclass="error"
+              ></p>
+            </div>
+
+            <div class="email-container">
+              <label for="email-label">Email:</label>
+              <div class="aling">
+                <input
+                  type="email"
+                  class="email-input"
+                  id="email"
+                  name="email"
+                  placeholder="Ingrese su email"
+                  autocomplete="off"
+                />
+              </div>
+              <p
+                th:if="${#fields.hasErrors('email')}"
+                th:errors="*{email}"
+                th:errorclass="error"
+              ></p>
+            </div>
+
+            <div class="direccion-container">
+              <label for="direccion-label">Dirección:</label>
+              <div class="aling">
+                <input
+                  type="text"
+                  class="direccion-input"
+                  id="address"
+                  name="address"
+                  placeholder="Ingrese su dirección"
+                  autocomplete="off"
+                />
+              </div>
+              <p
+                th:if="${#fields.hasErrors('address')}"
+                th:errors="*{address}"
+                th:errorclass="error"
+              ></p>
+            </div>
+
+            <div class="cel-container">
+              <label for="cel-label">Teléfono:</label>
+              <div class="aling">
+                <input
+                  type="text"
+                  class="cel-input"
+                  id="cellphone"
+                  name="cellphone"
+                  placeholder="Ingrese su teléfono"
+                  autocomplete="off"
+                />
+              </div>
+              <p
+                th:if="${#fields.hasErrors('cellphone')}"
+                th:errors="*{cellphone}"
+                th:errorclass="error"
+              ></p>
+            </div>
+
+            <div class="password-container">
+              <label for="password-label">Contraseña</label>
+              <div class="aling">
+                <input
+                  type="password"
+                  class="password-input"
+                  id="password"
+                  name="password"
+                  placeholder="Ingrese su contraseña"
+                  autocomplete="off"
+                />
+              </div>
+              <p
+                th:if="${#fields.hasErrors('password')}"
+                th:errors="*{password}"
+                th:errorclass="error"
+              ></p>
+            </div>
+            <div class="guardar-container">
+              <button type="submit" class="guardar-button">Guardar</button>
+            </div>
+          </form>
         </div>
-
-        <div
-          class="alert alert-success"
-          role="alert"
-          th:text="${success}"
-          th:if="${success}"
-        ></div>
-
-        <form th:action="@{/register}" method="post" th:object="${userDto}">
-          <div class="name-container">
-            <label for="name-label">Nombre:</label>
-            <div class="aling">
-              <input
-                type="text"
-                class="name-input"
-                id="firtName"
-                name="firtName"
-                placeholder="Ingrese su nombre"
-                autocomplete="off"
-              />
-            </div>
-            <p
-              th:if="${#fields.hasErrors('firtName')}"
-              th:errors="*{firtName}"
-              th:errorclass="error"
-            ></p>
-          </div>
-
-          <div class="apellido-container">
-            <label for="apellido-label">Apellido:</label>
-            <div class="aling">
-              <input
-                type="text"
-                class="apellido-input"
-                id="lastName"
-                name="lastName"
-                placeholder="Ingrese su apellido"
-                autocomplete="off"
-              />
-            </div>
-            <p
-              th:if="${#fields.hasErrors('lastName')}"
-              th:errors="*{lastName}"
-              th:errorclass="error"
-            ></p>
-          </div>
-
-          <div class="email-container">
-            <label for="email-label">Email:</label>
-            <div class="aling">
-              <input
-                type="email"
-                class="email-input"
-                id="email"
-                name="email"
-                placeholder="Ingrese su email"
-                autocomplete="off"
-              />
-            </div>
-            <p
-              th:if="${#fields.hasErrors('email')}"
-              th:errors="*{email}"
-              th:errorclass="error"
-            ></p>
-          </div>
-
-          <div class="direccion-container">
-            <label for="direccion-label">Dirección:</label>
-            <div class="aling">
-              <input
-                type="text"
-                class="direccion-input"
-                id="address"
-                name="address"
-                placeholder="Ingrese su dirección"
-                autocomplete="off"
-              />
-            </div>
-            <p
-              th:if="${#fields.hasErrors('address')}"
-              th:errors="*{address}"
-              th:errorclass="error"
-            ></p>
-          </div>
-
-          <div class="cel-container">
-            <label for="cel-label">Teléfono:</label>
-            <div class="aling">
-              <input
-                type="text"
-                class="cel-input"
-                id="cellphone"
-                name="cellphone"
-                placeholder="Ingrese su teléfono"
-                autocomplete="off"
-              />
-            </div>
-            <p
-              th:if="${#fields.hasErrors('cellphone')}"
-              th:errors="*{cellphone}"
-              th:errorclass="error"
-            ></p>
-          </div>
-
-          <div class="password-container">
-            <label for="password-label">Contraseña</label>
-            <div class="aling">
-              <input
-                type="password"
-                class="password-input"
-                id="password"
-                name="password"
-                placeholder="Ingrese su contraseña"
-                autocomplete="off"
-              />
-            </div>
-            <p
-              th:if="${#fields.hasErrors('password')}"
-              th:errors="*{password}"
-              th:errorclass="error"
-            ></p>
-          </div>
-          <div class="guardar-container">
-            <button type="submit" class="guardar-button">Guardar</button>
-          </div>
-        </form>
       </div>
     </div>
 
     <!-- container -->
-
-    <!-- Footer -->
-    <div th:insert="~{user/template_user::footer}"></div>
   </body>
 
   <style>
@@ -188,19 +164,22 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
         sans-serif;
-      background-color: hsl(0, 0%, 95%);
+      background-color: hsl(0, 0%, 100%);
+    }
+
+    .container-main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       height: 100dvh;
     }
 
     .container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      width: 28.5%;
       background-color: #fff;
-      max-width: fit-content;
-      margin: auto;
-      border-radius: 1rem;
-      padding: 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     .aling-items {
       width: 20rem;
@@ -242,7 +221,7 @@
     .direccion-container,
     .cel-container,
     .password-container {
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
     }
 
     input {
@@ -268,11 +247,23 @@
       background-color: #bf7083;
       color: #fff;
       font-weight: 600;
+      width: 100%;
       transition: background-color 200ms ease;
     }
 
     .guardar-button:hover {
       background-color: #9f4147;
+    }
+
+    .imagen {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    }
+
+    .imagen img {
+      width: 100%;
     }
   </style>
 </html>
